API complete
All of the functionality for the api now works.  The user is able to CRUD a trail and features and then link the features to a trail. Now i need to sort out authentication for creating a trail for hte project to be complete
