# CW2/comp2001_flask/app.py
@@ -1,7 +1,7 @@
 # app.py
 from flask import render_template
 import config
-from models import Trail
+from models import Trail, Features
 
 app = config.connex_app
 app.add_api(config.basedir / "swagger.yml")
@@ -9,7 +9,8 @@ app.add_api(config.basedir / "swagger.yml")
 @app.route("/")
 def home():
     trails = Trail.query.all()
-    return render_template("home.html", trails=trails)
+    features = Features.query.all()
+    return render_template("home.html", trails=trails, features=features)
 
 if __name__ == "__main__":
     app.run(host="0.0.0.0", port=8000, debug=True)
